# music-league-graphs

./: .gitignore  README.md  pyproject.toml  secret.toml
graphs/: scraper.py
league/: round_1.html  round_10.html  round_2.html  round_3.html  round_4.html  round_5.html  round_6.html  round_7.html  round_8.html  round_9.html
league_1/: Music League _ Risky DIScs _ Film Soundtrack 🎞.htm  Music League _ Risky DIScs _ Generation Game 👶.htm  Music League _ Risky DIScs _ Songs to code to 👩_💻.htm  Music League _ Risky DIScs _ Wish you were here 🌍.htm
league_2/: Music League _ 2 Risky 2 DIScs _ Best sample 🎛.htm  Music League _ 2 Risky 2 DIScs _ Best summer song ☀.htm  Music League _ 2 Risky 2 DIScs _ Obscurity 🕵️_♀️.htm  Music League _ 2 Risky 2 DIScs _ Riskware's anthem 🎶.htm  Music League _ 2 Risky 2 DIScs _ Song with a drink in the title 🍸.htm  Music League _ 2 Risky 2 DIScs _ To the polls❌.htm
league_3/: Music League _ Risky DIScs_ Tokyo Drift _ Advert songs 📺.htm  Music League _ Risky DIScs_ Tokyo Drift _ Back to basics 🎸.htm  Music League _ Risky DIScs_ Tokyo Drift _ Breaking the law 🕵️_♀️.htm  Music League _ Risky DIScs_ Tokyo Drift _ Colours 🎨.htm  Music League _ Risky DIScs_ Tokyo Drift _ Duets 🎤.htm  Music League _ Risky DIScs_ Tokyo Drift _ Guilty pleasures 👀.htm
league_4/: Music League _ Risky & DIScs _ ⚓ Track related to a Riskaware core value.htm  Music League _ Risky & DIScs _ 🍎 Song with a fruit in the title.htm  Music League _ Risky & DIScs _ 🎯 Darts walk on song.htm  Music League _ Risky & DIScs _ 🎸 Best instrumental.htm  (+1 more)
(+24 files in other folders)
