[tool.poetry]
name = "music-league-graphs"
version = "0.1.0"
description = ""
authors = ["Fred Cook"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
beautifulsoup4 = "^4.12.3"
tomli = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
