[project]
name = "music-league-graphs"
version = "0.1.0"
description = ""
authors = [{ name = "Fred Cook" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "pandas>=2.2.3,<3",
    "beautifulsoup4>=4.12.3,<5",
    "tomli>=2.2.1,<3",
    "bs4>=0.0.2,<0.0.3",
    "requests>=2.32.3,<3",
    "pyarrow>=18.1.0,<19",
    "matplotlib>=3.10.0,<4",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5,<7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
